some file changes

--- a/index.html
+++ b/index.html
@@ -2037,7 +2037,7 @@
      <!-- ****************residential projects modification********************** -->
     <section class="residential">
       <div class="container">
-        <h2 class="h2-set">Browse Residential Projects in Top 8 Cities</h2>
+        <h2 class="h2-set additional-h2">Browse Residential Projects in Top 8 Cities</h2>
         <div class="row wrapper">
           <div class="col-lg-11 col-md-12 col-12 d-block h4-set">
             <div class="bottomline d-flex justify-content-between flex-wrap w-100">
