property__option section bug arise

--- a/index.html
+++ b/index.html
@@ -1285,6 +1285,7 @@
     <!-- ****************counter modification********************** -->
     <section class="counter__setting">
       <div class="container">
+        <h2 class="h2-set extra-setting-h2-snapshot">Mumbai Property Snapshot</h2>
         <div class="wrapper row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 d-block m-auto">
           <div class="counter__text">
