INDEX FILE BUG SOLVE

--- a/index.html
+++ b/index.html
@@ -1143,11 +1143,26 @@
     <!-- ********************resp-section is HERE ENDED ******************** -->
    </header>
    <main>
-    <section></section>
+     <!-- ****************fresh__prop modification********************** -->
+    <section class="fresh__prop">
+      <div class="container">
+        <h2 class="h2-set">Fresh Properties in Mumbai</h2>
+        <div class="wrapper row">
+        </div>
+      </div>
+    </section>
+     <!-- ****************trending__societies modification********************** -->
+    <section class="trending__societies">
+      <div class="container">
+        <h2 class="h2-set">Trending Societies near you</h2>
+        <div class="wrapper row">
+        </div>
+      </div>
+    </section>
      <!-- ****************counter modification********************** -->
      <section class="counter__setting">
       <div class="container">
-        <h2 class="h2-set extra-setting-h2-snapshot">Mumbai Property Snapshot</h2>
+        <h2 class="h2-set">Mumbai Property Snapshot</h2>
         <div class="wrapper row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 d-block m-auto">
           <div class="counter__text">
@@ -1261,7 +1276,7 @@
      <!-- ****************property option modification********************** -->
      <section class="property__option">
       <div class="container">
-        <h2 class="h2-set extra-setting-h2">Property Options in Mumbai</h2>
+        <h2 class="h2-set">Property Options in Mumbai</h2>
         <div class="row wrapper">
           <div class="col-lg-12 col-md-12 col-12 d-block">
             <div class="row wrapper">
@@ -1541,7 +1556,7 @@
      <!-- ****************mumbai projects modification********************** -->
      <section class="residential">
       <div class="container">
-        <h2 class="h2-set additional-setting-h2">New Projects in Mumbai</h2>
+        <h2 class="h2-set">New Projects in Mumbai</h2>
         <div class="row wrapper">
           <div class="col-lg-11 col-md-12 col-12 d-block h4-set">
             <div class="bottomline d-flex justify-content-between flex-wrap w-100">
@@ -1793,7 +1808,7 @@
      <!-- ****************residential projects modification********************** -->
     <section class="residential">
       <div class="container">
-        <h2 class="h2-set font-adjust-h2">Browse Residential Projects in Top 8 Cities</h2>
+        <h2 class="h2-set">Browse Residential Projects in Top 8 Cities</h2>
         <div class="row wrapper">
           <div class="col-lg-11 col-md-12 col-12 d-block h4-set">
             <div class="bottomline d-flex justify-content-between flex-wrap w-100">
