index file arrangement

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-   <!-- <div class="cursor"></div> -->
+ 
 
    <header>
      <!--******************* top-header section is going to be started ******************* -->
@@ -1279,13 +1279,13 @@
     <!-- ********************resp-section is HERE ENDED ******************** -->
    </header>
    <main>
+      <!-- <div class="cursor"></div> -->
      <!-- ****************search__properties modification********************** -->
      <section class="search__bar mb-5">
       <video src="IMAGES/banner/dubai_-_111239 (1080p).mp4" type="video/mp4" loop autoplay muted play-inline class="back-video"></video>
    <div class="overlay2"></div>
       <div class="container">
-        <div class="row wrapper wrapped">
-         
+        <div class="row wrapper wrapped">      
           <div class="col-xl-11 d-xl-block col-lg-12 d-lg-none d-md-none m-auto p-0">
             <div class="main__banner__filter__section__smartdeal d-flex flex-column">
               <div class="main__heading__smartdeal__sec text-center">
@@ -1497,7 +1497,7 @@
       </div>
    </section>
         
-   <section class="resp__search__bar">
+   <section class="resp__search__bar d-xl-none d-block">
     <video loop autoplay muted playsinline class="banner__video">
       <source src="IMAGES/banner/dubai_-_111239 (1080p).mp4" type="video/mp4" class="video__length">
   </video>
@@ -7879,9 +7879,10 @@ document.addEventListener('DOMContentLoaded', function () {
 <!-- ******************** openNewPage *************************************** -->
 <script>
   function openNewPage() {
-  window.location.href = 'newpopup.html';
-}
+    window.location.href = 'Assets/resp__input__search_filter/newpopup.html';
+  }
 </script>
+
 <!-- <script>
 
 var SCREEN_WIDTH = window.innerWidth;
