--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="jquery ui/jquery-ui.theme.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    <!-- <link rel="stylesheet" href="css/footer.css">s -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -29,11 +30,10 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/slick.theme.min.css">
-    <link rel="stylesheet" href="css/aos.css">
 
 </head>
 <body>
- 
+
 
    <header>
      <!--******************* top-header section is going to be started ******************* -->
@@ -1279,7 +1279,6 @@
     <!-- ********************resp-section is HERE ENDED ******************** -->
    </header>
    <main>
-      <!-- <div class="cursor"></div> -->
      <!-- ****************search__properties modification********************** -->
      <section class="search__bar mb-5">
       <video src="IMAGES/banner/dubai_-_111239 (1080p).mp4" type="video/mp4" loop autoplay muted play-inline class="back-video"></video>
@@ -1537,7 +1536,7 @@
       <div class="container">
         <h2 class="h2-set">Because you searched Mumbai</h2>
         <div class="wrapper row">
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom"data-aos="fade-right">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom">
             <div class="card h-featured2 back__card">
               <div class="card-body gradient justify-content-start">
                 <div class="card-content ">
@@ -1553,7 +1552,7 @@
               </div>            
             </div>
             </div>
-            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom"data-aos="fade-up-right">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom">
               <div class="card h-featured2 back__card">
                 <div class="card-body gradient justify-content-start">
                   <div class="card-content "> 
@@ -1569,7 +1568,7 @@
                 </div>            
               </div>
               </div>
-              <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom"data-aos="fade-up-left">
+              <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom">
                 <div class="card h-featured2 back__card">
                   <div class="card-body gradient justify-content-start">
                     <div class="card-content ">                 
@@ -1585,7 +1584,7 @@
                   </div>            
                 </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom"data-aos="fade-left">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-block margin-bottom">
                   <div class="card h-featured2 back__card">
                     <div class="card-body gradient justify-content-start">
                       <div class="card-content ">               
@@ -1612,7 +1611,7 @@
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 d-block margin-bottom">
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 d-block margin-bottom">
-                  <figure class="fig-img outline__banner mb-0"data-aos="fade-right">
+                  <figure class="fig-img outline__banner mb-0">
                     <img src="./IMAGES/card/dubai/Palm-Jumeirah.webp" alt="Palm-Jumeirah" class="img-fluid">
                     <figcaption class="fig-caption">
                       <div class="property__bar__option">
@@ -1623,7 +1622,7 @@
                     </figure>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 d-block margin-bottom">
-                  <table class="table table-bordered mt-5 table-hover table-striped table-responsive-sm"data-aos="fade-left">
+                  <table class="table table-bordered mt-5 table-hover table-striped table-responsive-sm">
                     <thead>
                       <tr class="bg-dark" colspan="2">
                         <th class="text-center text-white table-primary font-weight-bold">No. of Bedrooms</th>
@@ -7845,203 +7844,4 @@
 <script type="text/javascript" src="JS/slick.js"></script>
 <script type="text/javascript" src="JS/slick.min.js"></script>
 <script type="text/javascript" src="JS/slider.js"></script>
-<script type="text/javascript" src="JS/aos.js"></script>
-<script>
-  AOS.init();
-</script>
-<!-- <script>
-   var popupWindow; 
-
-function openPopup() {
-    popupWindow = window.open('newpopup.html', 'popupName', 'width=400,height=200,scrollbars=yes');
-}
-
-function closePopup() {
-    if (popupWindow) {
-        popupWindow.close();
-    }
-}
-
-document.addEventListener('DOMContentLoaded', function () {
-    var searchInputBox = document.querySelector('.bottomline__search__input__box');
-    var closeIcon = document.querySelector('.left-arrow-icon');
-    
-    if (searchInputBox) {
-        searchInputBox.addEventListener('click', openPopup);
-    }
-
-    if (closeIcon) {
-        closeIcon.addEventListener('click', closePopup);
-    }
-});
-
-</script> -->
-<!-- ******************** openNewPage *************************************** -->
-<script>
-  function openNewPage() {
-    window.location.href = 'Assets/resp__input__search_filter/newpopup.html';
-  }
-</script>
-
-<!-- <script>
-
-var SCREEN_WIDTH = window.innerWidth;
-var SCREEN_HEIGHT = window.innerHeight;
-
-var RADIUS = 70;
-
-var RADIUS_SCALE = 1;
-var RADIUS_SCALE_MIN = 1;
-var RADIUS_SCALE_MAX = 1.5;
-
-var QUANTITY = 25;
-
-var canvas;
-var context;
-var particles;
-
-var mouseX = SCREEN_WIDTH * 0.5;
-var mouseY = SCREEN_HEIGHT * 0.5;
-var mouseIsDown = false;
-
-function init() {
-
-canvas = document.getElementById( 'world' );
-
-if (canvas && canvas.getContext) {
-  context = canvas.getContext('2d');
-  
-  // Register event listeners
-  window.addEventListener('mousemove', documentMouseMoveHandler, false);
-  window.addEventListener('mousedown', documentMouseDownHandler, false);
-  window.addEventListener('mouseup', documentMouseUpHandler, false);
-  document.addEventListener('touchstart', documentTouchStartHandler, false);
-  document.addEventListener('touchmove', documentTouchMoveHandler, false);
-  window.addEventListener('resize', windowResizeHandler, false);
-  
-  createParticles();
-  
-  windowResizeHandler();
-  
-  setInterval( loop, 1000 / 60 );
-}
-}
-
-function createParticles() {
-particles = [];
-
-for (var i = 0; i < QUANTITY; i++) {
-  var particle = {
-    size: 1,
-    position: { x: mouseX, y: mouseY },
-    offset: { x: 0, y: 0 },
-    shift: { x: mouseX, y: mouseY },
-    speed: 0.01+Math.random()*0.04,
-    targetSize: 1,
-    fillColor: '#' + (Math.random() * 0x404040 + 0xaaaaaa | 0).toString(16),
-    orbit: RADIUS*.5 + (RADIUS * .5 * Math.random())
-  };
-  
-  particles.push( particle );
-}
-}
-
-function documentMouseMoveHandler(event) {
-mouseX = event.clientX - (window.innerWidth - SCREEN_WIDTH) * .5;
-mouseY = event.clientY - (window.innerHeight - SCREEN_HEIGHT) * .5;
-}
-
-function documentMouseDownHandler(event) {
-mouseIsDown = true;
-}
-
-function documentMouseUpHandler(event) {
-mouseIsDown = false;
-}
-
-function documentTouchStartHandler(event) {
-if(event.touches.length == 1) {
-  event.preventDefault();
-
-  mouseX = event.touches[0].pageX - (window.innerWidth - SCREEN_WIDTH) * .5;;
-  mouseY = event.touches[0].pageY - (window.innerHeight - SCREEN_HEIGHT) * .5;
-}
-}
-
-function documentTouchMoveHandler(event) {
-if(event.touches.length == 1) {
-  event.preventDefault();
-
-  mouseX = event.touches[0].pageX - (window.innerWidth - SCREEN_WIDTH) * .5;;
-  mouseY = event.touches[0].pageY - (window.innerHeight - SCREEN_HEIGHT) * .5;
-}
-}
-
-function windowResizeHandler() {
-SCREEN_WIDTH = window.innerWidth;
-SCREEN_HEIGHT = window.innerHeight;
-
-canvas.width = SCREEN_WIDTH;
-canvas.height = SCREEN_HEIGHT;
-}
-
-function loop() {
-
-if( mouseIsDown ) {
-  RADIUS_SCALE += ( RADIUS_SCALE_MAX - RADIUS_SCALE ) * (0.02);
-}
-else {
-  RADIUS_SCALE -= ( RADIUS_SCALE - RADIUS_SCALE_MIN ) * (0.02);
-}
-
-RADIUS_SCALE = Math.min( RADIUS_SCALE, RADIUS_SCALE_MAX );
-
-context.fillStyle = 'rgba(0,0,0,0.05)';
-   context.fillRect(0, 0, context.canvas.width, context.canvas.height);
-
-for (i = 0, len = particles.length; i < len; i++) {
-  var particle = particles[i];
-  
-  var lp = { x: particle.position.x, y: particle.position.y };
-  
-  // Rotation
-  particle.offset.x += particle.speed;
-  particle.offset.y += particle.speed;
-  
-  // Follow mouse with some lag
-  particle.shift.x += ( mouseX - particle.shift.x) * (particle.speed);
-  particle.shift.y += ( mouseY - particle.shift.y) * (particle.speed);
-  
-  // Apply position
-  particle.position.x = particle.shift.x + Math.cos(i + particle.offset.x) * (particle.orbit*RADIUS_SCALE);
-  particle.position.y = particle.shift.y + Math.sin(i + particle.offset.y) * (particle.orbit*RADIUS_SCALE);
-  
-  // Limit to screen bounds
-  particle.position.x = Math.max( Math.min( particle.position.x, SCREEN_WIDTH ), 0 );
-  particle.position.y = Math.max( Math.min( particle.position.y, SCREEN_HEIGHT ), 0 );
-  
-  particle.size += ( particle.targetSize - particle.size ) * 0.05;
-  
-  if( Math.round( particle.size ) == Math.round( particle.targetSize ) ) {
-    particle.targetSize = 1 + Math.random() * 7;
-  }
-  
-  context.beginPath();
-  context.fillStyle = particle.fillColor;
-  context.strokeStyle = particle.fillColor;
-  context.lineWidth = particle.size;
-  context.moveTo(lp.x, lp.y);
-  context.lineTo(particle.position.x, particle.position.y);
-  context.stroke();
-  context.arc(particle.position.x, particle.position.y, particle.size/2, 0, Math.PI*2, true);
-  context.fill();
-}
-}
-
-window.onload = init;
-
-
-
-Resources
-</script> -->
 </html>
